--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
     "-----DEVELOPMENT----": "---------------------------",
     "dev": "concurrently -p \"[{name}]\" -n server,client -c \"bgGreen.bold,bgBlue.bold\"  --kill-others-on-fail \"npm run dev:server\" \"npm run dev:client\"",
     "dev:server": "cd server && nodemon --config \"./nodemon.json\"",
-    "dev:client": "react-scripts start ",
+    "dev:client": "npm run CRA:start",
     "-----PRODUCTION----": "---------------------------",
     "prod:server": "cd server && npm run prod",
     "prod:build:server": "tsc --pretty --allowJs --outDir ./build_server -p ./server/tsconfig.json",
@@ -96,7 +96,7 @@
     "prod:heroku:client": "node --optimize_for_size --max_old_space_size=460 -gc_interval=100 node_modules/.bin/react-scripts build",
     "start": "npm run prod:heroku:server",
     "-----CRA----": "---------------------------",
-    "CRA:start": "react-scripts --requirenpm i @cypress/code-coverage nyc istanbul-lib-coverage @cypress/instrument-cra start",
+    "CRA:start": "react-scripts --require @cypress/instrument-cra start",
     "CRA:build": "react-scripts build ",
     "CRA:eject": "react-scripts eject",
     "CRA:test": "react-scripts test",
@@ -129,9 +129,9 @@
     ]
   },
   "devDependencies": {
-    "@bahmutov/add-typescript-to-cypress": "^2.1.2",
     "@cypress/code-coverage": "^3.8.3",
     "@cypress/instrument-cra": "^1.4.0",
+    "@cypress/webpack-preprocessor": "^5.4.11",
     "@ljharb/eslint-config": "^17.2.0",
     "@shinnn/eslint-config": "^7.0.0",
     "@testing-library/dom": "^7.26.3",
@@ -195,6 +195,7 @@
     "source-map-explorer": "^2.5.0",
     "start-server-and-test": "^1.11.5",
     "ts-jest": "^26.4.3",
+    "ts-loader": "^8.0.11",
     "webpack": "^4.44.2"
   },
   "jestSonar": {
