--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -55,8 +55,9 @@ jobs:
           path: |
             coverage
             analysis
+
   #-----------------------------------------
-  # Test
+  # unit test
   #-----------------------------------------
   unit-test:
     runs-on: ubuntu-latest
@@ -80,6 +81,9 @@ jobs:
           cd server
           npm run test:unit
 
+  #-----------------------------------------
+  # e2e test
+  #-----------------------------------------
   e2e-test:
     runs-on: ubuntu-latest
     container:
