--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@
 /.pnp
 .pnp.js
 
+.idea/sonarlint
+
 # testing
 # Need to push coverage beacause of this issue ... https://github.com/facebook/jest/issues/9324
 **/coverage
