--- a/.editorconfig
+++ b/.editorconfig
@@ -9,3 +9,9 @@ end_of_line = crlf
 charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
+
+[/hooks/**]
+end_of_line = lf
+
+[/cli/**]
+end_of_line = lf
