--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,9 @@
 .pnp.js
 
 # testing
-# Need to push coverage beacause of this issue ... https://github.com/facebook/jest/issues/9324
 **/coverage
 **/analysis
+/.idea/sonarlint
 
 # production
 # FIXME:
