--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -86,6 +86,7 @@ jobs:
   #-----------------------------------------
   e2e-test:
     runs-on: ubuntu-latest
+    needs: build
     container:
       image: cypress/browsers:node14.15.0-chrome86-ff82
       options: --user 1001 --shm-size=2g
@@ -121,6 +122,11 @@ jobs:
         run: |
           npm ci
           cd server && npm ci
+      # Download build
+      - name: Download build
+        uses: actions/download-artifact@v2
+        with:
+          name: build-14.x
       # e2e
       - name: e2e
         uses: cypress-io/github-action@v2
