--- a/package.json
+++ b/package.json
@@ -101,11 +101,11 @@
     "CRA:eject": "react-scripts eject",
     "CRA:test": "react-scripts test",
     "-----TEST----": "---------------------------",
-    "test:app": "cross-env NODE_ENV=test npm run dev",
+    "test:app": "cross-env NODE_ENV=test npm run dev:server",
     "test:client": "npm run CRA:test",
     "test:client:coverage": "react-scripts test --coverage --watchAll=false --silent --testResultsProcessor ./node_modules/jest-sonar-reporter ",
     "test:client:debug": "react-scripts --inspect-brk test --runInBand --no-cache --env=jest-environment-jsdom-sixteen",
-    "test:e2e": "cross-env NODE_ENV=test CYPRESS_BASE_URL=http://localhost:5001 start-server-and-test prod:heroku:server 5001 cypress:run",
+    "test:e2e": "cross-env NODE_ENV=test start-server-and-test prod:heroku:server 5001 cypress:run",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run  --record --key d290f2c0-5104-4643-96ff-ba6f773d0a9c --browser chrome --headless",
     "-----LINT, ANALYZE----": "---------------------------",
