--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.1",
     "@fortawesome/free-regular-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
-    "@fortawesome/react-fontawesome": "^0.1.11",
+    "@fortawesome/react-fontawesome": "^0.1.13",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^4.5.3",
     "cookie-parser": "^1.4.5",
@@ -65,8 +65,8 @@
     "react-i18next": "^11.7.3",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
-    "react-select": "^3.1.0",
+    "react-scripts": "^4.0.0",
+    "react-select": "^3.1.1",
     "react-toastify": "^6.1.0",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
@@ -75,11 +75,11 @@
     "sequelize": "^5.22.3",
     "sequelize-cli": "^6.2.0",
     "sequelize-typescript": "^1.1.0",
-    "swagger-ui-react": "^3.36.2",
+    "swagger-ui-react": "^3.37.2",
     "ts-node": "^9.0.0",
     "typeface-roboto": "^1.1.13",
     "typesafe-actions": "^5.1.0",
-    "typescript": "^4.0.3",
+    "typescript": "^4.0.5",
     "umzug": "^2.3.0",
     "uuid": "^8.3.1"
   },
@@ -144,15 +144,15 @@
     ]
   },
   "devDependencies": {
-    "@cypress/code-coverage": "^3.8.3",
+    "@cypress/code-coverage": "^3.8.5",
     "@cypress/instrument-cra": "^1.4.0",
-    "@cypress/webpack-preprocessor": "^5.4.11",
+    "@cypress/webpack-preprocessor": "^5.5.0",
     "@ljharb/eslint-config": "^17.3.0",
     "@shinnn/eslint-config": "^7.0.0",
     "@testing-library/dom": "^7.28.1",
-    "@testing-library/jest-dom": "^5.11.5",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^11.2.2",
+    "@testing-library/user-event": "^12.3.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/bluebird": "^3.5.33",
     "@types/body-parser": "^1.19.0",
@@ -167,31 +167,31 @@
     "@types/jsonwebtoken": "^8.5.0",
     "@types/morgan": "^1.9.2",
     "@types/node": "^14.14.10",
-    "@types/react": "^16.9.53",
+    "@types/react": "^16.14.2",
     "@types/react-bootstrap-date-picker": "^4.0.6",
     "@types/react-bootstrap-table-next": "^4.0.10",
     "@types/react-datepicker": "^2.11.1",
-    "@types/react-dom": "^16.9.9",
-    "@types/react-redux": "^7.1.9",
+    "@types/react-dom": "^16.9.10",
+    "@types/react-redux": "^7.1.11",
     "@types/react-router-dom": "^5.1.6",
     "@types/react-select": "^3.0.26",
     "@types/react-test-renderer": "^17.0.0",
     "@types/redux-mock-store": "^1.0.2",
     "@types/swagger-ui-react": "^3.35.0",
     "@types/umzug": "^2.3.0",
-    "@typescript-eslint/eslint-plugin": "^4.8.2",
-    "@typescript-eslint/parser": "^4.6.0",
+    "@typescript-eslint/eslint-plugin": "^4.9.0",
+    "@typescript-eslint/parser": "^4.9.0",
     "babel-node": "0.0.1-security",
     "concurrently": "^5.3.0",
     "cross-env": "^7.0.2",
-    "cypress": "^6.0.0",
+    "cypress": "^6.0.1",
     "cypress-intellij-reporter": "0.0.5",
     "cypress-plugin-snapshots": "^1.4.4",
     "cypress-skip-and-only-ui": "^1.2.10",
     "cypress-watch-and-reload": "^1.2.18",
     "eslint": "^7.14.0",
     "eslint-config-google": "^0.14.0",
-    "eslint-config-prettier": "^6.14.0",
+    "eslint-config-prettier": "^6.15.0",
     "eslint-config-sinon": "^4.0.0",
     "eslint-config-strict": "^14.0.1",
     "eslint-plugin-ie11": "^1.0.0",
@@ -199,18 +199,18 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-sonarjs": "^0.5.0",
-    "eslint-plugin-testing-library": "^3.10.0",
+    "eslint-plugin-testing-library": "^3.10.1",
     "install": "^0.13.0",
     "istanbul-lib-coverage": "^3.0.0",
     "jest-environment-jsdom-sixteen": "^1.0.3",
     "jest-fetch-mock": "3.0.3",
     "jest-sonar-reporter": "^2.0.0",
     "nyc": "^15.1.0",
-    "prettier": "^2.2.0",
+    "prettier": "^2.2.1",
     "redux-mock-store": "^1.5.4",
-    "source-map-explorer": "^2.5.0",
-    "start-server-and-test": "^1.11.5",
-    "ts-jest": "^26.4.3",
+    "source-map-explorer": "^2.5.1",
+    "start-server-and-test": "^1.11.6",
+    "ts-jest": "^26.4.4",
     "ts-loader": "^8.0.11",
     "webpack": "^4.44.2"
   },
