--- a/package.json
+++ b/package.json
@@ -116,21 +116,6 @@
     "release": "bash ./cli/release.sh",
     "build": "bash ./cli/build.sh"
   },
-  "nyc": {
-    "all": true,
-    "report-dir": "cypress-coverage",
-    "----Reporters List-----": "https://istanbul.js.org/docs/advanced/alternative-reporters/",
-    "reporter": [
-      "text",
-      "json",
-      "lcov",
-      "html"
-    ],
-    "exclude": [
-      "src/serviceWorker.ts",
-      "/build"
-    ]
-  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -147,6 +132,7 @@
     "@cypress/code-coverage": "^3.8.5",
     "@cypress/instrument-cra": "^1.4.0",
     "@cypress/webpack-preprocessor": "^5.5.0",
+    "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@ljharb/eslint-config": "^17.3.0",
     "@shinnn/eslint-config": "^7.0.0",
     "@testing-library/dom": "^7.28.1",
@@ -209,6 +195,7 @@
     "prettier": "^2.2.1",
     "redux-mock-store": "^1.5.4",
     "source-map-explorer": "^2.5.1",
+    "source-map-support": "^0.5.19",
     "start-server-and-test": "^1.11.6",
     "ts-jest": "^26.4.4",
     "ts-loader": "^8.0.11",
