Fix connection with specific schema

--- a/.nycrc.yml
+++ b/.nycrc.yml
@@ -2,10 +2,19 @@ extends: "@istanbuljs/nyc-config-typescript"
 reporter: [json, html, text, lcov]
 all: true
 exclude: [
-    'build/',
+    #
+    'build/', 'docker/', 'cypress/','hooks/',
+    #
+    '.eslintrc.js','.prettierrc.js','src/serviceWorker.ts',
+    # Coverage
+    'cypress-coverage/',
+    'coverage/',
+    # Test
     '**/*.test.ts',
     '**/*.spec.ts',
-    'src/serviceWorker.ts',
+    '**/mocks/**',
+    '**/test/**',
+    # node_modules
     '**/node_modules/**'
 ]
 report-dir: 'cypress-coverage'
