--- a/package.json
+++ b/package.json
@@ -102,7 +102,7 @@
     "CRA:test": "react-scripts test",
     "-----TEST----": "---------------------------",
     "test:app": "cross-env NODE_ENV=test nyc --silent npm run dev:server",
-    "test:client": "npm run CRA:test",
+    "test:client": "cross-env NODE_ENV=test npm run CRA:test",
     "test:client:coverage": "react-scripts test --coverage --watchAll=false --silent --testResultsProcessor ./node_modules/jest-sonar-reporter ",
     "test:client:debug": "react-scripts --inspect-brk test --runInBand --no-cache --env=jest-environment-jsdom-sixteen",
     "test:e2e": "cross-env NODE_ENV=test start-server-and-test prod:heroku:server 5001 cypress:run",
