--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -69,8 +69,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     name: unit tests
-    # For now disable this step
-    # if: ${{ 1==2 }}
+    # For now disable this step, only run e2e
+    if: ${{ 1==2 }}
     steps:
       - uses: actions/checkout@v2
       # Install dependencies
