--- a/package.json
+++ b/package.json
@@ -101,7 +101,8 @@
     "CRA:eject": "react-scripts eject",
     "CRA:test": "react-scripts test",
     "-----TEST----": "---------------------------",
-    "test:app": "cross-env NODE_ENV=test nyc --silent npm run dev:server",
+    "test:app": "cross-env NODE_ENV=test npm run dev:server",
+    "test:app:coverage": "cross-env NODE_ENV=test nyc --silent npm run dev:server",
     "test:client": "cross-env NODE_ENV=test npm run CRA:test",
     "test:client:coverage": "react-scripts test --coverage --watchAll=false --silent --testResultsProcessor ./node_modules/jest-sonar-reporter ",
     "test:client:debug": "react-scripts --inspect-brk test --runInBand --no-cache --env=jest-environment-jsdom-sixteen",
