--- a/package.json
+++ b/package.json
@@ -101,12 +101,13 @@
     "CRA:eject": "react-scripts eject",
     "CRA:test": "react-scripts test",
     "-----TEST----": "---------------------------",
-    "test:app": "cross-env NODE_ENV=test npm run dev:server",
-    "test:app:coverage": "cross-env NODE_ENV=test nyc --silent npm run dev:server",
+    "test:app": "concurrently -p \"[{name}]\" -n server,client -c \"bgGreen.bold,bgBlue.bold\"  --kill-others-on-fail \"npm run test:app:server\" \"npm run dev:client\"",
+    "test:app:server": "cross-env NODE_ENV=test npm run dev:server",
+    "test:app:server:coverage": "cross-env NODE_ENV=test nyc --silent npm run dev:server",
     "test:client": "cross-env NODE_ENV=test npm run CRA:test",
     "test:client:coverage": "react-scripts test --coverage --watchAll=false --silent --testResultsProcessor ./node_modules/jest-sonar-reporter ",
     "test:client:debug": "react-scripts --inspect-brk test --runInBand --no-cache --env=jest-environment-jsdom-sixteen",
-    "test:e2e": "cross-env NODE_ENV=test start-server-and-test prod:heroku:server 5001 cypress:run",
+    "test:e2e": "cross-env NODE_ENV=test start-server-and-test test:app 5000 cypress:run",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run  --record --key d290f2c0-5104-4643-96ff-ba6f773d0a9c --browser chrome --headless",
     "-----LINT, ANALYZE----": "---------------------------",
@@ -175,6 +176,7 @@
     "cypress-intellij-reporter": "0.0.5",
     "cypress-plugin-snapshots": "^1.4.4",
     "cypress-skip-and-only-ui": "^1.2.10",
+    "cypress-sonarqube-reporter": "^1.7.0",
     "cypress-watch-and-reload": "^1.2.18",
     "eslint": "^7.14.0",
     "eslint-config-google": "^0.14.0",
