--- a/package.json
+++ b/package.json
@@ -101,10 +101,10 @@
     "CRA:eject": "react-scripts eject",
     "CRA:test": "react-scripts test",
     "-----TEST----": "---------------------------",
-    "test:app": "concurrently -p \"[{name}]\" -n server,client -c \"bgGreen.bold,bgBlue.bold\"  --kill-others-on-fail \"npm run test:app:server\" \"npm run test:client\"",
+    "test:app": "concurrently -p \"[{name}]\" -n server,client -c \"bgGreen.bold,bgBlue.bold\"  --kill-others-on-fail \"npm run test:app:server\" \"cross-env CI=true npm run dev:client\"",
     "test:app:server": "cross-env NODE_ENV=test npm run prod:heroku:server",
     "test:app:server:coverage": "cross-env NODE_ENV=test nyc --silent npm run dev:server",
-    "test:client": "cross-env NODE_ENV=CI npm run CRA:test",
+    "test:client": "npm run CRA:test",
     "test:client:coverage": "react-scripts test --coverage --watchAll=false --silent --testResultsProcessor ./node_modules/jest-sonar-reporter ",
     "test:client:debug": "react-scripts --inspect-brk test --runInBand --no-cache --env=jest-environment-jsdom-sixteen",
     "test:e2e": "cross-env NODE_ENV=test start-server-and-test test:app 5000 cypress:run",
