--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -126,6 +126,9 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: build-14.x
+      # CRA "Bug" : https://github.com/facebook/create-react-app/issues/7612
+      - name: Fixing known bug
+        run: echo fs.inotify.max_user_watches=524288 | sudo tee -a /etc/sysctl.conf && sudo sysctl -p
       # e2e
       # https://medium.com/swlh/publish-your-cypress-test-report-with-github-actions-47248788713a
       - name: e2e
