--- a/package.json
+++ b/package.json
@@ -101,8 +101,9 @@
     "CRA:eject": "react-scripts eject",
     "CRA:test": "react-scripts test",
     "-----TEST----": "---------------------------",
-    "test:app": "concurrently -p \"[{name}]\" -n server,client -c \"bgGreen.bold,bgBlue.bold\"  --kill-others-on-fail \"npm run test:app:server\" \"cross-env CI=true npm run dev:client\"",
+    "test:app": "concurrently -p \"[{name}]\" -n server,client -c \"bgGreen.bold,bgBlue.bold\"  --kill-others-on-fail \"npm run test:app:server\" \"cross-env CI=true npm test:app:client\"",
     "test:app:server": "cross-env NODE_ENV=test npm run prod:heroku:server",
+    "test:app:client": "cross-env NODE_ENV=test CI=true npm run CRA:start",
     "test:app:server:coverage": "cross-env NODE_ENV=test nyc --silent npm run dev:server",
     "test:client": "npm run CRA:test",
     "test:client:coverage": "react-scripts test --coverage --watchAll=false --silent --testResultsProcessor ./node_modules/jest-sonar-reporter ",
