--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -83,7 +83,8 @@ jobs:
   #-----------------------------------------
   analyze:
     runs-on: ubuntu-latest
-    needs: [build, e2e]
+    # needs: [build, e2e]
+    needs: build
     name: Code Quality
     steps:
         - uses: actions/checkout@v2
