--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -35,7 +35,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        browser: chrome
+        # browser: chrome
         # browser: [ chrome, firefox ]
         containers: [1, 2, 3]
     # Run e2e only on develop
@@ -57,7 +57,8 @@ jobs:
           wait-on: 'http://localhost:5000 , http://localhost:5001'
           # Test options
           # config: baseUrl=http://localhost:5001
-          browser: ${{ matrix.browser }}
+          # browser: ${{ matrix.browser }}
+          browser: chrome
           # FIXME: check code coverage
           parallel: true
           group: 'e2e_${{ matrix.browser }}'
