--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -43,8 +43,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       # CRA "Bug" : https://github.com/facebook/create-react-app/issues/7612
-      # - name: Fixing known bug
-      #   run: echo fs.inotify.max_user_watches=524288 | tee -a /etc/sysctl.conf && sysctl -p
+      - name: Fixing known bug
+        run: echo "fs.inotify.max_user_watches=524288" >> /etc/sysctl.conf
       # e2e
       # https://medium.com/swlh/publish-your-cypress-test-report-with-github-actions-47248788713a
       # https://github.com/bahmutov/cypress-gh-action-example/tree/master/.github/workflows
