Drop e2e from pipeline

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -2,7 +2,8 @@ name: e2e
 on:
   push:
     branches:
-      - e2e
+      # Disable for now. I'll run e2e before push.
+      - e2e_disabled
 jobs:
   #-----------------------------------------
   # e2e test
