--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -20,7 +20,9 @@ sonar.sources=src, server, analysis, coverage, build
 # Exclusions
 sonar.exclusions=build/**, analysis/** , **/coverage/**
 sonar.cpd.exclusions= build/**, analysis/** , **/coverage/**
-sonar.coverage.exclusions= build/**, analysis/** , **/coverage/**
+# Fixme:
+# sonar.coverage.exclusions= build/**, analysis/** , **/coverage/**
+sonar.coverage.exclusions= */**
 
 # Coverage and Test
 sonar.dynamicAnalysis=reuseReports
