--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -15,11 +15,14 @@ sonar.verbose=true
 # Sources
 # relative paths to source directories. More details and properties are described
 # in https://sonarcloud.io/documentation/project-administration/narrowing-the-focus/
-sonar.sources=src, server, analysis, coverage, build
+# sonar.sources=src, server, analysis, coverage, build
+sonar.sources=src, server
 
 # Exclusions
-sonar.exclusions=build/**, analysis/** , **/coverage/**
-sonar.cpd.exclusions= build/**, analysis/** , **/coverage/**
+# sonar.exclusions=build/**, analysis/** , **/coverage/**
+sonar.exclusions=build/**
+# sonar.cpd.exclusions= build/**, analysis/** , **/coverage/**
+sonar.cpd.exclusions= build/**
 # Fixme:
 # sonar.coverage.exclusions= build/**, analysis/** , **/coverage/**
 sonar.coverage.exclusions= */**
