--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -28,9 +28,9 @@ sonar.cpd.exclusions= build/**
 sonar.coverage.exclusions= */**
 
 # Coverage and Test
-sonar.dynamicAnalysis=reuseReports
-sonar.javascript.lcov.reportPaths=coverage-cypress/lcov.info,server/coverage/lcov.info
-sonar.eslint.reportPaths=analysis/eslint-report.json
+# sonar.dynamicAnalysis=reuseReports
+# sonar.javascript.lcov.reportPaths=coverage-cypress/lcov.info,server/coverage/lcov.info
+# sonar.eslint.reportPaths=analysis/eslint-report.json
 
 # Test
 sonar.testExecutionReportPaths=analysis/jest-sonar-report.xml
