--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,7 +10,7 @@ sonar.projectVersion=2.10.3
 # General : Encoding, Language, Debug
 sonar.sourceEncoding=UTF-8
 sonar.language=ts
-sonar.verbose=true
+sonar.verbose=false
 
 # Sources
 # relative paths to source directories. More details and properties are described
@@ -33,8 +33,8 @@ sonar.coverage.exclusions= */**
 # sonar.eslint.reportPaths=analysis/eslint-report.json
 
 # Test
-sonar.testExecutionReportPaths=analysis/jest-sonar-report.xml
-sonar.tests=src/test, server/test
-sonar.test.inclusions=**/*.test.ts
+# sonar.testExecutionReportPaths=analysis/jest-sonar-report.xml
+# sonar.tests=src/test, server/test
+# sonar.test.inclusions=**/*.test.ts
 
 
