--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,26 +10,31 @@ sonar.projectVersion=2.10.3
 # General : Encoding, Language, Debug
 sonar.sourceEncoding=UTF-8
 sonar.language=ts
-sonar.verbose=true
+sonar.verbose=false
 
 # Sources
 # relative paths to source directories. More details and properties are described
 # in https://sonarcloud.io/documentation/project-administration/narrowing-the-focus/
-sonar.sources=src, server, analysis, coverage, build
+# sonar.sources=src, server, analysis, coverage, build
+sonar.sources=src, server
 
 # Exclusions
-sonar.exclusions=build/**, analysis/** , **/coverage/**
-sonar.cpd.exclusions= build/**, analysis/** , **/coverage/**
-sonar.coverage.exclusions= build/**, analysis/** , **/coverage/**
+# sonar.exclusions=build/**, analysis/** , **/coverage/**
+sonar.exclusions=build/**
+# sonar.cpd.exclusions= build/**, analysis/** , **/coverage/**
+sonar.cpd.exclusions= build/**
+# Fixme:
+# sonar.coverage.exclusions= build/**, analysis/** , **/coverage/**
+sonar.coverage.exclusions= */**
 
 # Coverage and Test
-sonar.dynamicAnalysis=reuseReports
-sonar.javascript.lcov.reportPaths=coverage-cypress/lcov.info,server/coverage/lcov.info
-sonar.eslint.reportPaths=analysis/eslint-report.json
+# sonar.dynamicAnalysis=reuseReports
+# sonar.javascript.lcov.reportPaths=coverage-cypress/lcov.info,server/coverage/lcov.info
+# sonar.eslint.reportPaths=analysis/eslint-report.json
 
 # Test
-sonar.testExecutionReportPaths=analysis/jest-sonar-report.xml
-sonar.tests=src/test, server/test
-sonar.test.inclusions=**/*.test.ts
+# sonar.testExecutionReportPaths=analysis/jest-sonar-report.xml
+# sonar.tests=src/test, server/test
+# sonar.test.inclusions=**/*.test.ts
 
 
