--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.13",
+    "@types/uuid": "^8.3.0",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^4.5.3",
     "cookie-parser": "^1.4.5",
