--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "calcetto",
   "private": false,
-  "version": "2.12.5",
+  "version": "2.12.6",
   "description": "Table Soccer Manager",
   "engines": {
     "node": "14.x",
@@ -59,6 +59,7 @@
     "react-bootstrap-table2-editor": "^1.4.0",
     "react-bootstrap-table2-filter": "^1.3.3",
     "react-bootstrap-table2-toolkit": "^2.1.3",
+    "react-cookie-consent": "^6.2.1",
     "react-datepicker": "^3.3.0",
     "react-dom": "^16.14.0",
     "react-facebook-login": "^4.1.1",
