--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -60,6 +60,27 @@ jobs:
           name: analysis-${{ matrix.node-version }}
           path: analysis
   #-----------------------------------------
+  # Release
+  #-----------------------------------------
+  release:
+    runs-on: ubuntu-latest
+    needs: build
+    if: startsWith(github.ref, 'refs/tags/v')
+    steps:
+    - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
+    - name: Get the version
+      id: get_version
+      run: echo ::set-output name=VERSION::$(echo $GITHUB_REF | cut -d / -f 3)
+    - name: Create Pull Request
+      uses: peter-evans/create-pull-request@v3
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+        title: Release ${{ steps.get_version.outputs.VERSION }}
+        body: Release ${{ steps.get_version.outputs.VERSION }}
+        branch: master
+  #-----------------------------------------
   # unit test
   #-----------------------------------------
   unit-test:
