--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -70,18 +70,20 @@ jobs:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
-    - name: Get the version
-      id: get_version
+    - name: Gather info
+      id: gather_info
       run: |
-        echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
+        echo ::set-output name=version::${GITHUB_REF/refs\/tags\//}
+        echo ::set-output name=branch::${GITHUB_REF#refs/heads/}
         echo ${GITHUB_REF/refs\/tags\//}
+        echo ${GITHUB_REF#refs/heads/}
     - name: Create Pull Request
       if: startsWith(github.ref, 'refs/tags/v')
       uses: peter-evans/create-pull-request@v3
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
-        title: Release ${{ steps.get_version.outputs.VERSION }}
-        body: Release ${{ steps.get_version.outputs.VERSION }}
+        title: Release ${{ steps.gather_info.outputs.version }}
+        body: Release ${{ steps.gather_info.outputs.version }}
         branch: master
   #-----------------------------------------
   # unit test
