--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -73,10 +73,10 @@ jobs:
     - name: Gather info
       id: gather_info
       run: |
-        echo ::set-output name=version::${GITHUB_REF/refs\/tags\//}
+        echo ::set-output name=version::${GITHUB_REF#refs/tags/}
         echo ::set-output name=branch::${GITHUB_REF#refs/heads/}
-        echo ${GITHUB_REF/refs\/tags\//}
-        echo ${GITHUB_REF#refs/heads/}
+        echo ${{ steps.gather_info.outputs.version }}
+        echo ${{ steps.gather_info.outputs.branch }}
     - name: Create Pull Request
       if: startsWith(github.ref, 'refs/tags/v')
       uses: peter-evans/create-pull-request@v3
