--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -80,6 +80,7 @@ jobs:
         echo ${{ steps.gather_info.outputs.branch }}
         echo -----------------
         echo ${{ github.ref }}
+        echo -----------------
     - name: Create Pull Request
       if: startsWith(github.ref, 'refs/tags/v')
       uses: peter-evans/create-pull-request@v3
