--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -65,7 +65,7 @@ jobs:
   #-----------------------------------------
   release:
     runs-on: ubuntu-latest
-    needs: build
+    # needs: build
     steps:
     - uses: actions/checkout@v2
       with:
