--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -70,21 +70,12 @@ jobs:
       - name: Gather info
         id: gather_info
         run: |
-          echo ::set-output name=tag::${GITHUB_REF#refs/*/}
-          echo ::set-output name=version::${GITHUB_REF#refs/tags/}
-          echo ::set-output name=branch::${GITHUB_REF#refs/heads/}
+          echo ::set-output name=version::$(echo $(git describe --tags --abbrev=0))
       - name: Check output
         env:
-          RELEASE_TAG: ${{ steps.gather_info.outputs.tag }}
           RELEASE_VERSION: ${{ steps.gather_info.outputs.version }}
-          RELEASE_BRANCH: ${{ steps.gather_info.outputs.branch }}
         run: |
-          echo $RELEASE_TAG
           echo $RELEASE_VERSION
-          echo $RELEASE_BRANCH
-          echo ${{ steps.gather_info.outputs.tag }}
-          echo ${{ steps.gather_info.outputs.version }}
-          echo ${{ steps.gather_info.outputs.branch }}
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3
         with:
