--- a/package.json
+++ b/package.json
@@ -36,23 +36,13 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.2",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
-    "@types/uuid": "^8.3.0",
-    "bcryptjs": "^2.4.3",
     "bootstrap": "^4.5.3",
-    "cookie-parser": "^1.4.5",
-    "cors": "^2.8.5",
-    "helmet": "^4.3.1",
     "i18next": "^19.8.4",
     "i18next-browser-languagedetector": "^6.0.1",
     "i18next-http-backend": "^1.0.21",
     "jquery": "^3.5.1",
-    "jsonwebtoken": "^8.5.1",
     "localforage": "^1.9.0",
-    "log4js": "^6.3.0",
-    "morgan": "^1.10.0",
     "nodemon": "^2.0.7",
-    "pg": "^8.5.1",
-    "pg-hstore": "^2.3.3",
     "react": "^16.14.0",
     "react-bootstrap": "^1.4.3",
     "react-bootstrap-table-next": "^4.0.3",
@@ -73,17 +63,10 @@
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
-    "reflect-metadata": "^0.1.13",
-    "sequelize": "^5.22.3",
-    "sequelize-cli": "^6.2.0",
-    "sequelize-typescript": "^1.1.0",
     "swagger-ui-react": "^3.39.0",
-    "ts-node": "^9.1.1",
     "typeface-roboto": "^1.1.13",
     "typesafe-actions": "^5.1.0",
-    "typescript": "^4.0.5",
-    "umzug": "^2.3.0",
-    "uuid": "^8.3.2"
+    "typescript": "^4.0.5"
   },
   "scripts": {
     "-----DEVELOPMENT----": "---------------------------",
@@ -94,7 +77,7 @@
     "prod:server": "cd server && npm run prod",
     "prod:build:server": "tsc --pretty --allowJs --outDir ./build_server -p ./server/tsconfig.json",
     "prod:heroku": "npm i && npm run prod:heroku:server",
-    "prod:heroku:server": "./node_modules/.bin/ts-node --project ./server/tsconfig.json ./server/server.ts  server.js --optimize_for_size --max_old_space_size=460 --gc_interval=100",
+    "prod:heroku:server": "cd server && npm run prod:heroku:server",
     "prod:heroku:client": "node --optimize_for_size --max_old_space_size=460 -gc_interval=100 node_modules/.bin/react-scripts build",
     "start": "npm run prod:heroku:server",
     "-----CRA----": "---------------------------",
