--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   },
   "scripts": {
     "prod:build": "tsc --pretty",
+    "prod:heroku:server": "./node_modules/.bin/ts-node server.ts --optimize_for_size --max_old_space_size=460 --gc_interval=100",
     "prod": " ../node_modules/.bin/ts-node server.ts ",
     "dev": "nodemon --config \"./nodemon.json\"",
     "test:unit": "cross-env NODE_ENV=test jest",
@@ -55,6 +56,7 @@
     "@types/jest": "^26.0.20",
     "@types/node-fetch": "^2.5.7",
     "@types/supertest": "^2.0.10",
+    "@types/uuid": "^8.3.0",
     "cross-env": "^7.0.3",
     "jest": "^26.6.3",
     "node-fetch": "^2.6.1",
@@ -64,7 +66,23 @@
     "typescript": "^4.0.5"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
+    "helmet": "^4.3.1",
+    "jsonwebtoken": "^8.5.1",
+    "log4js": "^6.3.0",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.7",
-    "ts-node": "^9.1.1"
+    "pg": "^8.5.1",
+    "pg-hstore": "^2.3.3",
+    "reflect-metadata": "^0.1.13",
+    "sequelize": "^6.3.5",
+    "sequelize-cli": "^6.2.0",
+    "sequelize-typescript": "^2.0.0-beta.1",
+    "ts-node": "^9.1.1",
+    "umzug": "^2.3.0",
+    "umzug-typescript-helper": "^1.0.10",
+    "uuid": "^8.3.2"
   }
 }
