--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,6 +22,10 @@
             "request": "launch",
             "url": "http://localhost:5000",
             "webRoot": "${workspaceFolder}/src",
+            "userDataDir":false,
+            "runtimeArgs": [
+                "--profile-directory=Profile 1"
+            ],
             "sourceMapPathOverrides": {
                 "webpack:///src/*": "${webRoot}/*"
             }
