--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,7 @@
     "prod:build": "tsc --pretty",
     "prod:heroku:server": "./node_modules/.bin/ts-node server.ts --optimize_for_size --max_old_space_size=460 --gc_interval=100",
     "prod": " ../node_modules/.bin/ts-node server.ts ",
-    "dev": "nodemon --config \"./nodemon.json\"",
+    "dev": "./node_modules/.bin/nodemon --config \"./nodemon.json\"",
     "test:unit": "cross-env NODE_ENV=test jest",
     "test:unit:watch": "cross-env NODE_ENV=test jest -o --watch --detectOpenHandles",
     "test:unit:coverage": "cross-env NODE_ENV=test --coverage --detectOpenHandles",
@@ -60,10 +60,11 @@
     "cross-env": "^7.0.3",
     "jest": "^26.6.3",
     "node-fetch": "^2.6.1",
+    "nodemon": "^2.0.7",
     "start-server-and-test": "^1.11.7",
     "supertest": "^4.0.2",
     "ts-jest": "^26.4.4",
-    "typescript": "^4.0.5"
+    "typescript": "^4.1.3"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -73,7 +74,6 @@
     "jsonwebtoken": "^8.5.1",
     "log4js": "^6.3.0",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.7",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
     "reflect-metadata": "^0.1.13",
