--- a/server/package.json
+++ b/server/package.json
@@ -55,6 +55,7 @@
   "devDependencies": {
     "@types/jest": "^26.0.20",
     "@types/node-fetch": "^2.5.7",
+    "@types/node-schedule": "^1.3.1",
     "@types/supertest": "^2.0.10",
     "@types/uuid": "^8.3.0",
     "cross-env": "^7.0.3",
@@ -74,6 +75,7 @@
     "jsonwebtoken": "^8.5.1",
     "log4js": "^6.3.0",
     "morgan": "^1.10.0",
+    "node-schedule": "^1.3.2",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
     "reflect-metadata": "^0.1.13",
@@ -81,7 +83,7 @@
     "sequelize-cli": "^6.2.0",
     "sequelize-typescript": "^2.0.0-beta.1",
     "ts-node": "^9.1.1",
-    "umzug": "^2.3.0",
+    "umzug": "^3.0.0-beta.14",
     "uuid": "^8.3.2"
   }
 }
