Fix Heroku deploy

--- a/package.json
+++ b/package.json
@@ -75,10 +75,10 @@
     "-----PRODUCTION----": "---------------------------",
     "prod:server": "cd server && npm run prod",
     "prod:build:server": "tsc --pretty --allowJs --outDir ./build_server -p ./server/tsconfig.json",
-    "prod:heroku": "npm i && npm run prod:heroku:server",
-    "prod:heroku:server": "cd server && npm run prod:heroku:server",
+    "prod:heroku": "npm ci && prod:heroku:client && npm ci && npm run prod:heroku:server",
+    "prod:heroku:server": "cd server && npm ci && npm run prod:heroku:server",
     "prod:heroku:client": "node --optimize_for_size --max_old_space_size=460 -gc_interval=100 node_modules/.bin/react-scripts build",
-    "start": "npm run prod:heroku:server",
+    "start": "npm run prod:heroku",
     "-----CRA----": "---------------------------",
     "CRA:start": "react-scripts --require @cypress/instrument-cra start",
     "CRA:build": "react-scripts build ",
