--- a/package.json
+++ b/package.json
@@ -76,13 +76,10 @@
     "prod:server": "cd server && npm run prod",
     "prod:build:server": "tsc --pretty --allowJs --outDir ./build_server -p ./server/tsconfig.json",
     "-----HEROKU----": "---------------------------",
-    "heroku-prebuild": "echo This runs before Heroku installs dependencies.",
-    "heroku-postbuild": "npm run CRA:build",
+    "heroku-prebuild": "cd server && npm ci",
+    "heroku-postbuild": "npm run CRA:build ",
     "heroku-cleanup": "echo This runs after Heroku prunes and caches dependencies.",
-    "prod:heroku": "prod:heroku:client && npm run prod:heroku:server",
-    "prod:heroku:server": "cd server && npm ci && npm run prod:heroku:server",
-    "prod:heroku:client": "node --optimize_for_size --max_old_space_size=460 -gc_interval=100 node_modules/.bin/react-scripts build",
-    "start": "npm run prod:heroku:server",
+    "start": "cd server && npm run prod:heroku:server",
     "-----CRA----": "---------------------------",
     "CRA:start": "react-scripts --require @cypress/instrument-cra start",
     "CRA:build": "react-scripts build ",
