--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/paolocattani/calcetto.git/"
+    "url": "https://github.com/paolocattani/calcetto"
   },
   "directories": {
     "test": "test"
