--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "calcetto",
   "private": false,
-  "version": "version:version:2.15.0",
+  "version": "version.1.0",
   "description": "Table Soccer Manager",
   "engines": {
     "node": "14.x",
