--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,7 +4,7 @@
 sonar.organization=paolocattani
 sonar.projectKey=paolocattani_calcetto
 sonar.projectName=Calcetto
-sonar.projectVersion=version:version:2.15.0
+sonar.projectVersion=2.13.2
 #sonar.typescript.tsconfigPath=tsconfig.json
 
 # General : Encoding, Language, Debug
