--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,5 @@
 # Don't convert EOL on .sh files
-# *.sh text eol=lf
+*.sh text eol=lf
 
 # .gitattributes snippet to force users to use same line endings for project.
 #
